k8s/pelias/csv-importer.yaml
---
# Source: pelias/templates/api-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-csv-importer
  namespace: pelias
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pelias-csv-importer
  template:
    metadata:
      labels:
        app: pelias-csv-importer
    spec:
      containers:
        - name: csv-importer
          image: pelias/csv-importer:master
          command: ["sh", "-c", "./bin/parallel || true"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: data-volume
              mountPath: /data/csv
          resources:
            limits:
              memory: 0.2Gi
              cpu: "0.25"
            requests:
              memory: 0.2Gi
              cpu: "0.01"
      volumes:
        - name: config-volume
          configMap:
            name: pelias-json-configmap
            items:
              - key: pelias.json
                path: pelias.json
        - name: data-volume
          configMap:
            name: pelias-data
