k8s/pelias/pip.yaml
---
# Source: pelias/templates/pip-service.tpl
apiVersion: v1
kind: Service
metadata:
  name: pelias-pip-service
  namespace: pelias
spec:
  selector:
    app: pelias-pip
  ports:
    - protocol: TCP
      port: 3102
  type: ClusterIP
---
# Source: pelias/templates/pip-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-pip
  namespace: pelias
spec:
  replicas: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: pelias-pip
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-pip
    spec:
      containers:
        - name: pelias-pip
          image: pelias/pip-service:master
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: data-volume
              mountPath: /data
          resources:
            limits:
              memory: 10Gi
              cpu: "3"
              ephemeral-storage: 35Gi
            requests:
              memory: "5Gi"
              cpu: "0.1"
              ephemeral-storage: 35Gi
          readinessProbe:
            httpGet:
              path: /12/12
              port: 3102
            initialDelaySeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: pelias-json-configmap
            items:
              - key: pelias.json
                path: pelias.json
        - name: data-volume
          persistentVolumeClaim:
            claimName: pip-pvc
